--- a/product/pom.xml
+++ b/product/pom.xml
@@ -75,6 +75,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-spring-data-jpa</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
