--- a/customer_hibernate_panache/src/main/resources/application.properties
+++ b/customer_hibernate_panache/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-quarkus.http.port=8080
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=sa
 quarkus.datasource.password=admin
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/consumer_db
+quarkus.datasource.reactive.url=postgresql://localhost:5432/consumer_db
+quarkus.datasource.reactive.max-size=20
 quarkus.hibernate-orm.log.sql=true
+quarkus.datasource.jdbc=false
+#quarkus.hibernate-orm.database.generation=drop-and-create
 
-quarkus.hibernate-orm.database.generation=update
 quarkus.swagger-ui.path=swaggerui
-quarkus.swagger-ui.always-include=true
 mp.openapi.extensions.smallrye.info.title=Example API
 %dev.mp.openapi.extensions.smallrye.info.title=Example API (development)
 %test.mp.openapi.extensions.smallrye.info.title=Example API (test)
